# catastrophic-forgetting-ai

./: .gitignore  FZA-Projection.py  README.md  fza_adapter_router.py  fza_api_server.py  fza_arena_benchmark.py  fza_attention_patch.py  fza_broker.py  fza_build_rust.sh  fza_cloud_broker.py  fza_compressor.py  fza_constitution.py  fza_distributed_inference.py  fza_dmoe_router.py  fza_engine.py  fza_event_bus.py  fza_evolution_arena.py  fza_ewc.py  fza_ewc_merge.py  fza_final_test.py  fza_fusion_engine.py  fza_hebbian_layer.py  fza_infinite_context.py  fza_kernel_forge.py  fza_latent_telepathy.py  fza_llm_bridge.py  fza_lobe_spawner.py  fza_local_engine.py  fza_lora.py  fza_math_compressor.py  fza_memory_graph.py  fza_mesh_node.py  fza_meta_cognition.py  fza_micro_reflex.py  fza_motor_cortex.py  fza_node_registry.py  fza_os_agent.py  fza_procedural_memory.py  fza_rag.py  fza_reflex_node.py  (+21 more)
fza-ui/: index.html  package-lock.json  package.json
fza-ui/src/: App.tsx  index.css
fza_core_rust/: Cargo.toml  pyproject.toml
fza_core_rust/src/: lib.rs
