[package]
name = "fza_core_rust"
version = "0.1.0"
edition = "2021"

[lib]
name = "fza_mesh_rs"
crate-type = ["cdylib"]

[dependencies]
# PyO3 — Python bindings
pyo3 = { version = "0.21", features = ["extension-module", "abi3-py38"] }

# Async runtime (Tokio)
tokio = { version = "1", features = ["full"] }

# libp2p with Kademlia DHT + noise encryption + TCP transport
libp2p = { version = "0.53", features = [
    "tcp",
    "noise",
    "yamux",
    "kad",
    "mdns",
    "identify",
    "tokio",
] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Async channels & sync primitives
tokio-stream = "0.1"
futures = "0.3"
tracing = "0.1"
tracing-subscriber = "0.3"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
panic = "abort"
